32x: support palette changes during hblank in packedPx mode